--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
     "@emailjs/browser": "^4.4.1",
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
+    "@types/three": "^0.167.1",
     "framer-motion": "^11.3.18",
     "maath": "^0.10.8",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-vertical-timeline-component": "^3.6.0"
+    "react-vertical-timeline-component": "^3.6.0",
+    "three": "^0.167.0"
   },
   "devDependencies": {
+    "@types/dat.gui": "^0.7.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "dat.gui": "^0.7.9",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
