--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
     "dat.gui": "^0.7.9",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "lil-gui": "^0.19.2",
     "postcss": "^8",
     "prettier": "^3.3.3",
+    "react-parallax-tilt": "^1.7.234",
+    "react-tilt": "^1.0.2",
     "sass": "^1.77.8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
