--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "react": "^18",
     "react-dom": "^18",
     "react-vertical-timeline-component": "^3.6.0",
-    "three": "^0.167.0"
+    "three": "^0.167.1"
   },
   "devDependencies": {
     "@types/dat.gui": "^0.7.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-vertical-timeline-component": "^3.3.6",
     "dat.gui": "^0.7.9",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
