--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@types/dat.gui": "^0.7.13",
+    "@types/lodash": "^4.17.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -31,6 +32,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "lil-gui": "^0.19.2",
+    "lodash": "^4.17.21",
     "postcss": "^8",
     "prettier": "^3.3.3",
     "react-parallax-tilt": "^1.7.234",
