--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.21.1",
+    "@ant-design/nextjs-registry": "^1.0.1",
     "@emailjs/browser": "^4.4.1",
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
     "@types/three": "^0.167.1",
+    "antd": "^5.21.6",
     "axios": "^1.7.7",
     "firebase": "^10.3.1",
     "framer-motion": "^11.3.18",
@@ -20,6 +23,8 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-phone-input-2": "^2.15.1",
+    "react-toastify": "^10.0.6",
     "react-vertical-timeline-component": "^3.6.0",
     "three": "^0.167.1"
   },
