--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emailjs/browser": "^4.4.1",
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
+    "@reduxjs/toolkit": "^2.3.0",
     "@types/three": "^0.167.1",
     "antd": "^5.21.6",
     "axios": "^1.7.7",
@@ -24,6 +25,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-phone-input-2": "^2.15.1",
+    "react-redux": "^9.1.2",
     "react-toastify": "^10.0.6",
     "react-vertical-timeline-component": "^3.6.0",
     "three": "^0.167.1"
