--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "postcss": "^8",
     "prettier": "^3.3.3",
     "react-parallax-tilt": "^1.7.234",
+    "react-spinners": "^0.14.1",
     "react-tilt": "^1.0.2",
     "sass": "^1.77.8",
     "tailwindcss": "^3.4.1",
