--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
     "@reduxjs/toolkit": "^2.3.0",
+    "@types/nodemailer": "^6.4.16",
     "@types/three": "^0.167.1",
     "antd": "^5.21.6",
     "axios": "^1.7.7",
     "firebase": "^10.3.1",
     "framer-motion": "^11.3.18",
     "maath": "^0.10.8",
+    "mongodb": "^6.10.0",
     "next": "14.2.5",
+    "nodemailer": "^6.9.16",
     "react": "^18",
     "react-dom": "^18",
     "react-phone-input-2": "^2.15.1",
