--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/fiber": "^8.16.8",
     "@types/three": "^0.167.1",
     "axios": "^1.7.7",
+    "firebase": "^11.0.1",
     "framer-motion": "^11.3.18",
     "maath": "^0.10.8",
     "mongodb": "^6.10.0",
