--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.21.1",
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
+    "@reduxjs/toolkit": "^2.3.0",
     "@types/three": "^0.167.1",
+    "antd": "^5.22.0",
     "axios": "^1.7.7",
     "firebase": "^11.0.1",
     "framer-motion": "^11.3.18",
     "maath": "^0.10.8",
     "mongodb": "^6.10.0",
-    "next": "14.2.5",
+    "next": "^15.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-phone-input-2": "^2.15.1",
@@ -45,6 +48,7 @@
     "react-spinners": "^0.14.1",
     "react-tilt": "^1.0.2",
     "sass": "^1.77.8",
+    "swr": "^2.2.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
