--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@reduxjs/toolkit": "^2.3.0",
     "@types/three": "^0.167.1",
     "antd": "^5.22.0",
-    "axios": "^1.7.7",
     "firebase": "^11.0.1",
     "framer-motion": "^11.3.18",
     "maath": "^0.10.8",
@@ -37,6 +36,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-vertical-timeline-component": "^3.3.6",
+    "antd-img-crop": "^4.24.0",
+    "axios": "^1.6.8",
     "dat.gui": "^0.7.9",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
