--- a/package.json
+++ b/package.json
@@ -32,17 +32,20 @@
   "devDependencies": {
     "@types/dat.gui": "^0.7.13",
     "@types/lodash": "^4.17.9",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-vertical-timeline-component": "^3.3.6",
     "antd-img-crop": "^4.24.0",
-    "axios": "^1.6.8",
+    "aws-sdk": "^2.1692.0",
+    "axios": "0.27.2",
     "dat.gui": "^0.7.9",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "lil-gui": "^0.19.2",
     "lodash": "^4.17.21",
+    "multer": "^1.4.5-lts.1",
     "postcss": "^8",
     "prettier": "^3.3.3",
     "react-parallax-tilt": "^1.7.234",
