--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.21.1",
+    "@radix-ui/react-hover-card": "^1.1.14",
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
     "@reduxjs/toolkit": "^2.3.0",
     "@types/three": "^0.167.1",
     "antd": "^5.22.0",
+    "clsx": "^2.1.1",
     "firebase": "^11.0.1",
     "framer-motion": "^11.3.18",
     "maath": "^0.10.8",
@@ -27,6 +29,7 @@
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.6",
     "react-vertical-timeline-component": "^3.6.0",
+    "tailwind-merge": "^3.3.1",
     "three": "^0.167.1"
   },
   "devDependencies": {
