--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongodb": "^6.10.0",
     "next": "^15.0.3",
     "react": "^18",
+    "react-animated-cursor": "^2.11.2",
     "react-dom": "^18",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.1.2",
