--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "firebase": "^11.0.1",
     "framer-motion": "^11.3.18",
+    "gltfpack": "^0.24.0",
     "maath": "^0.10.8",
     "mongodb": "^6.10.0",
     "next": "^15.0.3",
@@ -42,6 +43,7 @@
     "@types/react-dom": "^18",
     "@types/react-vertical-timeline-component": "^3.3.6",
     "antd-img-crop": "^4.24.0",
+    "autoprefixer": "^10.4.21",
     "aws-sdk": "^2.1692.0",
     "axios": "0.27.2",
     "dat.gui": "^0.7.9",
@@ -50,7 +52,9 @@
     "lil-gui": "^0.19.2",
     "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
-    "postcss": "^8",
+    "postcss": "^8.5.6",
+    "postcss-loader": "^8.1.1",
+    "postcss-purgecss": "^5.0.0",
     "prettier": "^3.3.3",
     "react-parallax-tilt": "^1.7.234",
     "react-spinners": "^0.14.1",
