--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-toastify": "^10.0.6",
     "react-vertical-timeline-component": "^3.6.0",
     "tailwind-merge": "^3.3.1",
-    "three": "^0.167.1"
+    "three": "^0.167.1",
+    "three-stdlib": "^2.36.0"
   },
   "devDependencies": {
     "@types/dat.gui": "^0.7.13",
